cabal-version:      3.12
name:               jolharg-config
version:            0.2.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk
-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:    Config.Env
  other-modules:      Config.Foreign
  -- other-extensions:
  build-depends:
    , base              ^>=4.21.0.0
    , template-haskell  ^>=2.23.0.0
    , text              ^>=2.1.2
  -- , jolharg-models
  -- , time
  -- , uuid-types
  -- , yaml
  -- if impl(ghcjs)
  --   build-depends: ghcjs-dom-jsffi
  hs-source-dirs:     lib
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-unrecognised-warning-flags
    -Wno-missed-specialisations -Wno-prepositive-qualified-module
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures

test-suite jolharg-config-test
  if arch(javascript) || arch(wasm32)
    buildable: False
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  default-language:   GHC2024
  default-extensions:
    OverloadedStrings
    UnicodeSyntax
  main-is:            Spec.hs
  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N 
  ghc-options:
    -Wall -Werror -Weverything
    -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Wno-missed-specialisations
    -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
  build-depends:
    , base   ^>=4.21.0.0
    , hspec  ^>=2.11.12
  -- , jolharg-models
  -- , hspec-core
  -- , hspec-expectations
  -- , HUnit
  -- , QuickCheck
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    Data.Config.ThSpec
    MainSpec
